# FastCoin

./: .gitignore  README.md  index.html  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
docs/REPOSITORY_SNAPSHOT/: REPOSITORY_SNAPSHOT_v6.1_2026-05-26.md  REPOSITORY_SNAPSHOT_v6.2_2026-05-27.md  REPOSITORY_SNAPSHOT_v6.3_2026-05-27.md  REPOSITORY_SNAPSHOT_v7.1_2026-05-28.md  REPOSITORY_SNAPSHOT_v8.0_2026-05-29.md  REPOSITORY_SNAPSHOT_v8.1_2026-06-16.md
docs/REPOSITORY_SNAPSHOT/snapshot_archive/: REPOSITORY_SNAPSHOT_v1.0_2026-05-25.md  REPOSITORY_SNAPSHOT_v2.0_2026-05-25.md  (+6 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: category_cmd.rs  config_cmd.rs  expense_cmd.rs  export_cmd.rs  import_cmd.rs  mod.rs  period_cmd.rs  settings_cmd.rs  source_cmd.rs  stats_cmd.rs
src-tauri/src/crypto/: decrypt.rs  encrypt.rs  key.rs
src-tauri/src/db/: mod.rs  models.rs  seed.rs
src-tauri/src/services/: expense_service.rs  export_service.rs  import_service.rs  mod.rs  stats_service.rs
src-tauri/src/utils/: error.rs  format.rs
src/constants/: defaults.ts
src/i18n/: en.json  index.ts  zh.json
src/lib/: platform.ts  tauri.ts
src/stores/: dataStore.ts  expenseStore.ts  noteHistoryStore.ts  settingsStore.ts  uiStore.ts
src/types/: category.ts  expense.ts  export.ts  index.ts  paymentSource.ts  period.ts  settings.ts
src/utils/: format.ts  theme.ts
(+24 files in other folders)
