[package]
name = "fastcoin"
version = "0.2.0"
description = "FastCoin - 快捷记账"
authors = ["Stfsta"]
edition = "2021"

[lib]
name = "fastcoin_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_xlsxwriter = "0.77"
base64ct = { version = "1", features = ["alloc"] }
thiserror = "2"
